k8s/cilium-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-deployment
  labels:
    app: testApp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: hashicorp/http-echo:0.2.3
        args:
          - "-text=Hello, I'm using Cilium"
          - "-listen=:80"
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  type: NodePort
  selector:
    app: app1
  ports:
    - port: 80
